Updates on Visualizations and Tables; New script.
Created a script for checking the version number of the in use packages
for citations.

Visualizations qmd updated to use language "classifiers" rather than
categories when referring to the CRC progression as it seemed more
appropriate to remain consistent. Completed smoking and alcohol
analysis, including transformations on those who show drinking (values
>0) to handle skewedness. Other small formatting changes.

Tables qmd changes from using fave stats to using dplyr to have more
control over what is displayed and how it is presented. Found a flow to
ensure that all tables generated follow the same general formatting for
standardization. Age and Gender completed. Save future work for when we
narrow scope on what topics we will focus on for our assignment
submission and focus on those tables next.

Next tasks:
- Any other tables needed on the data we plan to present in our EDA
  assignment submission
- Statistical tests to support or fail to support observed differences
  in the tables/visuals
- Download qualifying studys and observe the taxonomic/metabolic data,
  perform similar EDA on this data

--- a/EDA/Kaitlyn_EDA/Kaitlyn_Initial_EDA_Visuals.qmd
+++ b/EDA/Kaitlyn_EDA/Kaitlyn_Initial_EDA_Visuals.qmd
@@ -66,13 +66,13 @@ contributor1 <- qualifying_studies %>%
                          fill = disease_class)) +
   geom_bar() +
   scale_fill_manual(values = progression_colors, 
-                    name = "CRC Progression \nCategory") +
+                    name = "CRC Progression \nClassifiers") +
   theme(axis.text.x = element_text(angle = 20, hjust = 1, lineheight = 1.1)) +
   # Labeling
   #---------
   xlab("Author Last Name, First Initial, and Year") +
   ylab("Sample Count") +
-  ggtitle("Qualifying Study Sample Count by CRC Progression Category")
+  ggtitle("Qualifying Study Sample Count by CRC Progression Class")
 
 # Bar Chart by Study
 ####################
@@ -84,13 +84,13 @@ contributor2 <- qualifying_studies %>%
                          fill = disease_class)) +
   geom_bar(position = "fill") +
   scale_fill_manual(values = progression_colors, 
-                    name = "CRC Progression \nCategory") +
+                    name = "CRC Progression \nClassifiers") +
   theme(axis.text.x = element_text(angle = 20, hjust = 1, lineheight = 1.1)) +
   # Labeling
   #---------
   xlab("Author Last Name, First Initial, and Year") +
-  ylab("Disease Category Proportion") +
-  ggtitle("Qualifying Study Sample Proportions by CRC Progression Category")
+  ylab("Proportion") +
+  ggtitle("Qualifying Study Sample Proportions by CRC Progression Class")
 
 contributor1
 
@@ -103,7 +103,7 @@ contributor2
 #| label: Study Disease Proportion Check
 # ---
   
-# Bar Chart of total CRC Progression Category Proportions
+# Bar Chart of Total CRC Progression Class Proportions
 #########################################################
 qualifying_studies %>%
   # Plotting
@@ -111,11 +111,11 @@ qualifying_studies %>%
   ggplot(aes(x=disease_class, stat = "count", fill = disease_class)) +
   geom_bar() +
   scale_fill_manual(values = progression_colors, 
-                    name = "CRC Progression \nCategory") +
+                    name = "CRC Progression \nClassifiers") +
   # Labeling
   #---------
-  labs(y = "Sample Count", x = "CRC Progression") +
-  ggtitle("Counts of CRC Progression Stages in Study")
+  labs(y = "Sample Count", x = "CRC Progression Classes") +
+  ggtitle("Counts of CRC Progression Classes in Study")
 ```
 
 ## Age Analysis
@@ -152,7 +152,7 @@ normality2 <- qualifying_studies %>%
   geom_histogram(bins=20) + 
   # Labeling
   #---------
-  ggtitle("Distribution of age") +
+  ggtitle("Distribution of Age") +
   xlab("age")
 
 normality1 / normality2
@@ -195,12 +195,11 @@ decade1 <- qualifying_studies %>%
   geom_text(stat = "count", aes(label = after_stat(count)), 
             vjust = -0.21, size = 3.5, color = "black") +
   theme(axis.text.x = element_text(angle = 30, hjust = 1, lineheight = 1.1), 
-        axis.title.x = element_text(hjust = 1.5), 
-        plot.title = element_text(hjust = -0.5)) +
+        axis.title.x = element_text(hjust = 1.5)) +
   xlab("Age by Decade") + 
   labs(
     title = "Age Distribution By Decade", 
-    subtitle = "With and Without CRC Progression")
+    subtitle = "With and Without CRC Progression Classifiers")
 
 # Barplot of age categories: Colored
 ####################################
@@ -213,7 +212,7 @@ decade2 <- qualifying_studies %>%
   ggplot(aes(x=age_decade, fill = disease_class)) + 
   geom_bar() + 
   scale_fill_manual(values = progression_colors, 
-                    name = "CRC Progression \nCategory") + 
+                    name = "CRC Progression \nClassifiers") + 
   # Labeling 
   #--------- 
   theme(axis.text.x = element_text(angle = 30, hjust = 1, lineheight = 1.1),
@@ -236,16 +235,14 @@ decade3 <- qualifying_studies %>%
   # --------
   ggplot(aes(x=age_decade, fill = disease_class)) +
   geom_bar(position="fill") +
-  scale_fill_manual(values = progression_colors, name = "CRC Progression \nCategory") +
+  scale_fill_manual(values = progression_colors, 
+                    name = "CRC Progression \nClassifiers") +
   # Labeling
   #---------
   ggtitle("Proportion of CRC Progression by Age Decade") + 
   labs(x = "Age By Decade", y = "Proportion")
 
 decade3
-
-
-
 ```
 
 ### By Gender
@@ -265,10 +262,10 @@ qualifying_studies %>%
   ggplot(aes(x=gender, fill=disease_class)) +
   geom_bar(position = "fill") +
   scale_fill_manual(values = progression_colors, 
-                    name = "CRC Progression \nCategory") +
+                    name = "CRC Progression \nClassifiers") +
   # Labeling
   #---------
-  ggtitle("Proportions of CRC Progression Categorization by Gender") +
+  ggtitle("Proportions of CRC Progression Classifier by Gender") +
   labs(x = "Age", y = "Proportion") +
   theme(axis.text.x = element_text(angle = 25, hjust = 1, lineheight = 1.1))
 
@@ -283,7 +280,7 @@ qualifying_studies %>%
   ggplot(aes(x = age_decade, fill = disease_class)) + 
   geom_bar() +
   scale_fill_manual(values = progression_colors, 
-                    name = "CRC Progression \nCategory") +
+                    name = "CRC Progression \nClassifiers") +
   facet_wrap(~gender) +
   # Labeling
   #---------
@@ -302,7 +299,7 @@ qualifying_studies %>%
   ggplot(aes(x = age_decade, fill = disease_class)) + 
   geom_bar(position = "fill") +
   scale_fill_manual(values = progression_colors, 
-                    name = "CRC Progression \nCategory") +
+                    name = "CRC Progression \nClassifiers") +
   facet_wrap(~gender) +
   # Labeling
   #---------
@@ -332,7 +329,8 @@ qualifying_studies %>%
   # Labeling   
   #---------   
   ggtitle("Distribution of Age by CRC Progression") +   
-  ylab("Age") +    xlab("CRC Progression")  
+  ylab("Age") +
+  xlab("CRC Progression")  
 
 # Disease Location 
 ################# 
@@ -363,7 +361,7 @@ qualifying_studies %>%
   ggplot(aes(x=disease_stage, y=age)) +    
   geom_boxplot(outlier.shape = NA) +   
   geom_jitter(alpha = 0.15, width = 0.15) +   
-  stat_summary(fun = mean, geom = "point", shape = 20, size = 5, color = "red") +     # Labeling   
+  stat_summary(fun = mean, geom = "point", shape = 20, size = 5, color = "red") +   
   #---------   
   ggtitle("Distribution of Age by Disease Stage") +   
   ylab("Age") +    
@@ -403,7 +401,7 @@ country1 <- qualifying_studies  %>%
   xlab("Country (NATO country code, trigram)") + 
   labs(
     title = "Country Sample Count Distribution", 
-    subtitle = "With and Without CRC Disease Progression")
+    subtitle = "With and Without CRC Progression Classifiers")
 
 country2 <- qualifying_studies  %>% 
   # Set Up
@@ -416,7 +414,7 @@ country2 <- qualifying_studies  %>%
              fill=disease_class)) + 
   geom_bar() +
   scale_fill_manual(values = progression_colors, 
-                    name = "CRC Progression \nCategory") +
+                    name = "CRC Progression \nClassifiers") +
   # Labeling
   #---------
   theme(axis.text.x = element_text(angle = 30, hjust = 0.9, lineheight = 1.1),
@@ -439,7 +437,7 @@ qualifying_studies %>%
                          FUN = function(x) -length(x)), fill = disease_class)) + 
   geom_bar(position = "fill") +
   scale_fill_manual(values = progression_colors, 
-                    name = "CRC Progression \nCategory") +
+                    name = "CRC Progression \nClassifiers") +
   # Labeling
   #---------
   ggtitle("Proportion of CRC Progression Per Country") +
@@ -475,7 +473,7 @@ city1 <- qualifying_studies  %>%
   xlab("Location (City)") + 
   labs(
     title = "Location (City) Sample Count Distribution", 
-    subtitle = "With and Without CRC Progression")
+    subtitle = "With and Without CRC Progression Classifiers")
 
 city2 <- qualifying_studies  %>% 
   # Set Up
@@ -488,7 +486,7 @@ city2 <- qualifying_studies  %>%
              fill=disease_class)) + 
   geom_bar() +
   scale_fill_manual(values = progression_colors, 
-                    name = "CRC Progression \nCategory") +
+                    name = "CRC Progression \nClassifiers") +
   # Labeling
   #---------
   theme(axis.text.x = element_text(angle = 30, hjust = 0.9, lineheight = 1.1),
@@ -511,10 +509,10 @@ qualifying_studies  %>%
                          FUN = function(x) -length(x)), fill = disease_class)) + 
   geom_bar(position = "fill") +
   scale_fill_manual(values = progression_colors, 
-                    name = "CRC Progression \nCategory") +
+                    name = "CRC Progression \nClassifiers") +
   # Labeling
   #---------
-  ggtitle("Proportion of CRC Progression Per Location (City)") +
+  ggtitle("Proportion of CRC Progression Class Per Location (City)") +
   labs(x = "Location (City)", y = "Proportion")
 
 ```
@@ -536,7 +534,7 @@ qualifying_studies %>%
   ggplot(aes(x = reorder(diet, diet, 
                          FUN = function(x) -length(x)))) + 
   geom_bar(aes(fill = disease_class)) +
-  scale_fill_manual(values = progression_colors, name = "CRC Progression") +
+  scale_fill_manual(values = progression_colors, name = "CRC Progression \nClassifiers") +
   # Labeling
   #---------
   geom_text(stat = "count", aes(label = after_stat(count)), vjust = -0.17, color = "black") +
@@ -554,7 +552,7 @@ qualifying_studies %>%
   ggplot(aes(x = reorder(diet, diet, 
                          FUN = function(x) -length(x)))) + 
   geom_bar(aes(fill = disease_class), position = "fill") +
-  scale_fill_manual(values = progression_colors, name = "CRC Progression") +
+  scale_fill_manual(values = progression_colors, name = "CRC Progression \nClassifiers") +
   # Labeling
   #---------
   ggtitle("Diet of Indiviudals") +
@@ -629,7 +627,7 @@ qualifying_studies %>%
   ggplot(aes(x = reorder(smoking_status, smoking_status, 
                          FUN = function(x) -length(x)))) + 
   geom_bar(aes(fill = disease_class)) +
-  scale_fill_manual(values = progression_colors, name = "CRC Progression") +
+  scale_fill_manual(values = progression_colors, name = "CRC Progression \nClassifier") +
   # Labeling
   #---------
   geom_text(stat = "count", aes(label = after_stat(count)), vjust = -0.17, color = "black") +
@@ -653,30 +651,77 @@ qualifying_studies %>%
   ggplot(aes(x = reorder(smoking_status, smoking_status, 
                          FUN = function(x) -length(x)))) + 
   geom_bar(aes(fill = disease_class), position = "fill") +
-  scale_fill_manual(values = progression_colors, name = "CRC Progression") +
+  scale_fill_manual(values = progression_colors, name = "CRC Progression \nClassifier") +
   # Labeling
   #---------
   ggtitle("Smoking Status of Individuals") +
-  labs(x = "Smoking Status", y = "Counts")
+  labs(x = "Smoking Status", y = "Proportion")
 ```
 
-###   Alcohol
+### Alcohol
 
-Note: There are only remarkable values in our `alcohol_numeric` column. The `alcohol` column only contains "no" and "N/A" values and thus was not deemed worthy of further analysis.
+Note: There are only remarkable values in our `alcohol_numeric` column, derived from Yachida et al. (2019). The `alcohol` column only contains "no" and "N/A" values and thus was not deemed worthy of further analysis.
 
 ```{r}
-#| label: Alcohol Analysis: Normality Check
+#| label: Alcohol Analysis: Drinkers vs Non-Drinkers via Numerics
 # ---
+
+# Current vs No Alcohol Setup: 
+##############################
+alcohol_qualifying <- qualifying_studies %>%   
+  # Set Up   
+  # ------   
+  filter(!is.na(alcohol_numeric)) %>% 
+  mutate(
+    alcohol_any = if_else(alcohol_numeric >0, "Drinker", "Non-Drinker")
+  ) 
+
+# Barplot Counts & Proportions
+##############################
+alcohol1 <- alcohol_qualifying %>% 
+  # Plotting   
+  # --------   
+  ggplot(aes(x = reorder(alcohol_any, alcohol_any, 
+                         FUN = function(x) -length(x)))) + 
+  geom_bar(aes(fill = disease_class)) +
+  scale_fill_manual(values = progression_colors, name = "CRC Progression \nClassifier") +
+  # Labeling
+  #---------
+  geom_text(stat = "count", aes(label = after_stat(count)), vjust = -0.17, color = "black") +
+  ggtitle("Drinking Status of Individuals") +
+  theme(axis.title.x = element_text(hjust = 1.5),
+        legend.position = "none") + 
+  labs(
+    title = "Drinking Status", 
+    subtitle = "Count vs Proportion", 
+    x = "Drinking Status", 
+    y = "Counts")
+
+alcohol2 <- alcohol_qualifying %>% 
+  ggplot(aes(x = reorder(alcohol_any, alcohol_any, 
+                         FUN = function(x) -length(x)))) + 
+  geom_bar(aes(fill = disease_class), position = "fill") +
+  scale_fill_manual(values = progression_colors, name = "CRC Progression \nClassifier") +
+  # Labeling
+  #---------
+  labs(y = "Proportion") +
+  theme(axis.title.x = element_blank())
+
+alcohol1 + alcohol2
+```
+
+```{r}
+#| label: Alcohol Analysis: Drinkers Normality Check
 
 # Normality check
 #################
 
-# QQPlot
-########
-normality3 <- qualifying_studies %>% 
+# QQPlot, Unmodified
+####################
+normality3 <- alcohol_qualifying %>% 
   # Set Up
   # ------
-  filter(!is.na(alcohol_numeric)) %>%
+  filter(alcohol_any == "Drinker") %>%
   # Plotting
   # --------
   ggplot(aes(sample = alcohol_numeric)) + 
@@ -684,14 +729,14 @@ normality3 <- qualifying_studies %>%
   geom_qq_line() +
   # Labeling
   #---------
-  ggtitle("QQ Plot of Alcohol (Numeric)")
+  ggtitle("QQ Plot of Alcohol (Numeric, grams per day)")
 
-# Histogram
-###########
-normality4 <- qualifying_studies %>%
+# Histogram, Unmodified
+#######################
+normality4 <- alcohol_qualifying %>%
   # Set Up
   # ------
-  filter(!is.na(alcohol_numeric)) %>%
+  filter(alcohol_any == "Drinker") %>%
   # Plotting
   # --------
   ggplot(aes(x = alcohol_numeric)) + 
@@ -699,16 +744,21 @@ normality4 <- qualifying_studies %>%
   # Labeling
   #---------
   ggtitle("Distribution of Alcohol (Numeric)") +
-  xlab("Alcohol (Numeric)")
+  xlab("Alcohol (Numeric, grams per day)")
 
 normality3 / normality4
 
-# QQPlot
-########
-normality5 <- qualifying_studies %>% 
+
+```
+
+```{r}
+# QQPlot, Log-Transformed
+#########################
+
+normality5 <- alcohol_qualifying %>% 
   # Set Up
   # ------
-  filter(!is.na(alcohol_numeric)) %>%
+  filter(alcohol_any == "Drinker") %>%
   # Plotting
   # --------
   ggplot(aes(sample = log(alcohol_numeric))) + 
@@ -716,25 +766,24 @@ normality5 <- qualifying_studies %>%
   geom_qq_line() +
   # Labeling
   #---------
-  ggtitle("QQ Plot of Log-Transformed Alcohol (Numeric)") +
+  ggtitle("QQ Plot of Log-Transformed Alcohol (Numeric, grams per day)")
   
 
-# Histogram
-###########
-normality6 <- qualifying_studies %>%
+# Histogram, Log-Transformed
+############################
+
+normality6 <- alcohol_qualifying %>%
   # Set Up
   # ------
-  filter(!is.na(alcohol_numeric)) %>%
+  filter(alcohol_any == "Drinker") %>%
   # Plotting
   # --------
   ggplot(aes(x = log(alcohol_numeric))) + 
-  geom_histogram(bins=20) + 
+  geom_histogram(bins = 35) + 
   # Labeling
   #---------
   ggtitle("Distribution of Log-Transformed Alcohol (Numeric)") +
-  xlab("Log-Transformed Alcohol (Numeric)")
+  xlab("Log-Transformed Alcohol (Numeric, grams per day)")
 
 normality5 / normality6
-
-
 ```
